--- a/src/components/author.module.css
+++ b/src/components/author.module.css
@@ -8,3 +8,10 @@
   height: 120px;
   margin-bottom: 15px;
 }
+
+@media only screen and (min-width: 576px){
+  .imgDiv {
+    width: 165px;
+    height: 180px;
+  }
+}
